--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@
   background-color: hsl(71, 73%, 54%);
   padding: 10px;
   width: 220px;
+  border-radius: 10px;
   /* margin-left: 10px; */
   color: white;
   font-size: 1.2rem;
