--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@
   padding: 10px;
   width: 220px;
   border-radius: 10px;
+  border-style: hidden;
   /* margin-left: 10px; */
   color: white;
   font-size: 1.2rem;
